[package]
name = "rust-ruby-ls"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-C", "target-cpu=native"]
rustdocflags = ["-C", "target-cpu=native"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[dependencies]
log = "0.4"
env_logger = "0.9.3"

fuzzy-matcher = "*"

regex = "1"

rayon = "1.7"

anyhow = { version = "1.0", features = ["backtrace"] }

tree-sitter = "0.20"
tree-sitter-ruby = "0.20"

walkdir = "2"

itertools = "0.10"

lsp-types = "0"
lsp-server = "0.7"

serde = "1"
serde_json = "1"
simd-json = "0.9"

crossbeam-channel = "0.5"
